# boxy-cli

./: .gitignore  BuildRunTest.sh  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  WinBuildRunTest.cmd
.devcontainer/: devcontainer.json
.gitea/workflows/: rust.yml
.github/workflows/: rust-clippy.yml  rust.yml
.idx/: dev.nix
binary-testing/: Cargo.toml
binary-testing/src/: bling.rs  constructs.rs  lib.rs  macros.rs  main.rs  prelude.rs  templates.rs  tests.rs
boxy-cli/: Cargo.toml  README.md
boxy-cli/src/: boxer.rs  constructs.rs  lib.rs  macros.rs  prelude.rs  templates.rs  tests.rs
boxy-cli/src/tests/: builder.rs  colors.rs  columnar.rs  mod.rs  padding.rs  performance.rs  render.rs  segment_api.rs  unicode.rs  wrapping.rs
boxy-macro/: Cargo.toml
boxy-macro/src/: lib.rs
examples/: example1.rs  example2.rs  example3.rs
src/: defs.rs  lib.rs
