[package]
name = "boxy-cli"
version = "2.1.0"
edition = "2024"
description = "Styled terminal boxes with multi-segment layouts, columnar grids, true-color borders, Unicode box-drawing, and word wrapping."
readme = "README.md"
repository = "https://github.com/BastaMasta/boxy-cli"
license = "MIT OR Apache-2.0"
keywords = ["cli", "terminal", "text", "box", "formatting"]
categories = ["command-line-interface", "development-tools"]
build = false

[badges]
maintenance = { status = "stable" }

[dependencies]
colored = "3.0.0"
hex_color = "3.0.0"
termsize = "0.1.9"
