[package]
name = "boxy-cli"
version = "2.2.1"
edition = "2024"
description = "Styled terminal boxes with multi-segment layouts, columnar grids, true-color borders, Unicode box-drawing, and word wrapping."
readme = "README.md"
repository = "https://github.com/BastaMasta/boxy-cli"
license = "MIT OR Apache-2.0"
keywords = ["cli", "terminal", "text", "box", "formatting"]
categories = ["command-line-interface", "development-tools"]
build = false

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
colored = "3.1.1"
hex_color = "3.0.0"
termsize = "0.1.9"
unicode-width = "0.2"
unicode-segmentation = "1"
